Add -XX:+UseCGroupMemoryLimitForHeap analysis.